# Science-Plot

./: .gitignore  DEVELOPMENT_ROADMAP.md  Launch_SciPlot_App.command  README.md  pyproject.toml
.github/workflows/: minimal-repository.yml
Tensile data/2mm/: E0.xlsx
docs/: ARCHITECTURE.md  SCIPLOT_CANVAS_M1_DESIGN_AUDIT.md  SCIPLOT_CANVAS_M2_EDITING_AUDIT.md  SCIPLOT_CANVAS_M2_REVIEW_AUDIT.md  SCIPLOT_CANVAS_M3_PROVIDER_UI_AUDIT.md  SCIPLOT_CANVAS_M3_TRANSACTION_AUDIT.md  SCIPLOT_COMPOSITION_M4_AUDIT.md  SCIPLOT_DATA_MAPPING_M3_AUDIT.md  SCIPLOT_OPERATION_FLOW_PLAN.md  SCIPLOT_READINESS_M5_AUDIT.md  SCIPLOT_REVIEWED_PROMOTION.md  SESSION_EVIDENCE.md  THIRD_PARTY_NOTICES.md
skill/: SKILL.md
skill/agents/: openai.yaml
skill/scripts/: sciplot
src/sciplot_core/: __init__.py  _bootstrap.py  _constants.py  _paths.py  _utils.py  acceptance.py  analysis_contract_probe.py  assistant_operations.py  assistant_provider.py  assistant_selection.py  assisted_cleanup.py  autoplot.py  batch.py  canvas_app_probe.py  canvas_assistant_probe.py  canvas_inspector_probe.py  canvas_openai_provider_probe.py  canvas_probe.py  canvas_review_probe.py  cli.py  codex_jobs.py  composition_delivery.py  composition_probe.py  composition_workspace.py  contract.py  curate.py  data_mapping.py  data_mapping_probe.py  delivery.py  doctor.py  evidence.py  figure_layouts.py  figure_profiles.py  figure_workflow.py  ingest.py  inspection_contract_probe.py  intake.py  (+50 more)
tests/: test_assistant_contract.py  test_autoplot_integrity.py  test_browser_surface.py  test_cli_surface.py  test_dsc_cycle_workflow.py  test_export_format_contract.py  test_figure_profiles.py  test_figure_workflow.py  test_frontend_topology.py  test_impact_condition_figure_set.py  test_log_minor_tick_policy.py  test_mechanical_test_contract.py  test_path_contract.py  test_publication_layout_boundary.py  test_publish_state.py  test_recipe_source_selection.py  test_render_export_integrity.py  test_rheology_viscosity_unit.py  test_scalar_field_rendering.py  test_semantic_multitest_contract.py  test_skill_wrapper_cwd.py  test_source_recognition_contract.py  test_studio_project_status.py  test_study_model_artifact_binding.py  test_style_template_contract.py  test_tensile_workbook_directory.py  test_unified_style_contract.py  test_user_output_contract.py  test_visual_review.py  test_workflow_transaction.py
(+153 files in other folders)
