[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciplot-core"
version = "0.1.0"
description = "Local SciPlot core, Studio, recipes, QA, and optional assisted cleanup for scientific plotting."
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "seaborn",
  "scienceplots",
  "numpy",
  "pandas",
  "charset-normalizer",
  "scipy",
  "statsmodels",
  "openpyxl",
  "xlrd",
  "PyMuPDF",
  "Pillow",
  "platformdirs",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15,<1",
]
studio = [
  "astropy",
  "h5py",
  "iminuit",
  "PyQt6",
  "sip",
]

[project.scripts]
sciplot = "sciplot_core.cli:main"

[tool.ruff]
extend-exclude = ["src/sciplot_core/_vendor"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sciplot_core = [
  "validated_envelopes.json",
  "intake_static/*",
  "_vendor/src/plot_contract.json",
  "_vendor/src/data_studio_templates/builtin/*.json",
  "_vendor/src/data_studio_templates/user/*.json",
]
